@@ -2,6 +2,7 @@ package com.fastcampus.loan.service;
 
 import com.fastcampus.loan.exception.BaseException;
 import com.fastcampus.loan.exception.ResultType;
+import com.fastcampus.loan.repository.ApplicationRepository;
 import lombok.RequiredArgsConstructor;
 
 import lombok.extern.slf4j.Slf4j;
@@ -24,11 +25,22 @@ import java.util.stream.Stream;
 public class FileStorageServiceImpl implements FileStorageService {
     @Value("${spring.servlet.multipart.location}")
     private String uploadPath;
+    private final ApplicationRepository applicationRepository;
 
     @Override
-    public void save(MultipartFile file) {
+    public void save(Long applicationId, MultipartFile file) {
+        if (!isPresentApplication(applicationId)) {
+            throw new BaseException(ResultType.SYSTEM_ERROR);
+        }
+
         try {
-            Files.copy(file.getInputStream(), Paths.get(uploadPath).resolve(file.getOriginalFilename()),
+            String applicationPath = uploadPath.concat("/" + applicationId);
+            Path directoryPath = Path.of(applicationPath);
+            if (!Files.exists(directoryPath)) {
+                Files.createDirectory(directoryPath);
+            }
+
+            Files.copy(file.getInputStream(), Paths.get(applicationPath).resolve(file.getOriginalFilename()),
                     StandardCopyOption.REPLACE_EXISTING); // 중복된 파일명일 경우 덮어쓰기한다.
         } catch (Exception e) {
             throw new BaseException(ResultType.SYSTEM_ERROR);
@@ -37,36 +49,56 @@ public class FileStorageServiceImpl implements FileStorageService {
 
     // 신청 서류 조회
     @Override
-    public Resource load(String fileName) {
+    public Resource load(Long applicationId, String fileName) {
+        if (!isPresentApplication(applicationId)) {
+            throw new BaseException(ResultType.SYSTEM_ERROR);
+        }
+
         try {
-            Path file = Paths.get(uploadPath).resolve(fileName);
+            String applicationPath = uploadPath.concat("/" + applicationId);
+            Path file = Paths.get(applicationPath).resolve(fileName);
             Resource resource = new UrlResource(file.toUri());
 
-            if (resource.isReadable() || resource.exists()) {
+            if (resource.exists() || resource.isReadable()) {
                 return resource;
             } else {
                 throw new BaseException(ResultType.NOT_EXIST);
             }
         } catch (Exception e) {
+            log.info("error message - {}", e.toString());
             throw new BaseException(ResultType.SYSTEM_ERROR);
         }
     }
 
     @Override
-    public Stream<Path> loadAll() {
+    public Stream<Path> loadAll(Long applicationId) {
+        if (!isPresentApplication(applicationId)) {
+            throw new BaseException(ResultType.SYSTEM_ERROR);
+        }
+
         // 신청서류에 대한 정보를 받아온다.
         // Files.walk에 경로와 depth를 넘겨주면, 그 경로에 있는 파일들을 depth 만큼 탐색 후 반환한다.
-        // 결론적으로 uploadPath에 있는 파일 리스트를 보여준다.
+        // 결론적으로 applicationPath에 있는 파일 리스트를 보여준다.
         try {
-            return Files.walk(Paths.get(uploadPath), 1).filter(path -> !path.equals(Paths.get(uploadPath)));
+            String applicationPath = uploadPath.concat("/" + applicationId);
+            return Files.walk(Paths.get(applicationPath), 1).filter(path -> !path.equals(Paths.get(applicationPath)));
         } catch (Exception e) {
             throw new BaseException(ResultType.SYSTEM_ERROR);
         }
     }
 
     @Override
-    public void deleteAll() {
-        // 해당 uploadPath에 있는 모든 파일 삭제
-        FileSystemUtils.deleteRecursively(Paths.get(uploadPath).toFile());
+    public void deleteAll(Long applicationId) {
+        if (!isPresentApplication(applicationId)) {
+            throw new BaseException(ResultType.SYSTEM_ERROR);
+        }
+
+        // 해당 path에 있는 모든 파일 삭제
+        String applicationPath = uploadPath.concat("/" + applicationId);
+        FileSystemUtils.deleteRecursively(Paths.get(applicationPath).toFile());
+    }
+
+    private boolean isPresentApplication(Long applicationId) {
+        return applicationRepository.findById(applicationId).isPresent();
     }
 }
